Bug fixes, polishing
Fixes applied:

Fixed issue that caused the app to be pushed down by about 20 pixels when loading images

When less then 5 images are loaded, the images will no longer be weirdly spaced . They will now float to the left and grow from left to right properly .

Reduced the size of the scrollbar in the breed selection menu

Fixed the clipping with the imagelist div that caused scrolling when only 2 rows of images are present.

Changes to be committed:
	modified:   my-app/src/App.css
	modified:   my-app/src/App.js

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -34,6 +34,7 @@ h1 {
 height: 28px; 
 border: 0px;
 padding-left: 2px;
+scrollbar-width: thin;
 }
 
 .search-bar select {
@@ -41,17 +42,22 @@ padding-left: 2px;
 }
 
 .image-list {
-  left: 25px;
+  left: 30px;
   width: 97%;
-  height: 78%;
+  height: 80%;
   position: absolute;
-  top: 165px;
+  top: 150px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(300px, 1fr));
-  row-gap: 10px;
-  overflow: scroll;
-  scrollbar-width:none ;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
+  grid-template-rows: repeat(auto-fit, minmax(300px, 300px));
+  gap: 6px;
+  row-gap: 6px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scrollbar-width: thin ;
+  scrollbar-color: rgb(43, 42, 42) rgb(148, 147, 147);
+  scroll-padding-left: 10px;
+  scrollbar-gutter: revert;
   margin: auto;
 }
 
